After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790536 - reset doesn't restart cursor blink
reset doesn't restart cursor blink
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-11-18 16:21 UTC by Egmont Koblinger
Modified: 2017-11-18 19:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (472 bytes, patch)
2017-11-18 19:44 UTC, Egmont Koblinger
committed Details | Review

Description Egmont Koblinger 2017-11-18 16:21:02 UTC
Have blinking cursor by default (GNOME-wide setting).

Change temporarily to a non-blinking one (e.g. underline: echo -ne '\e[4 q').

Hard or soft reset (e.g. the reset command, or echo -ne '\e[!p').

Notice that the default cursor shape is restored, but it doesn't start blinking. Even a keypress, focus in/out or an explicit cursor reset (echo -ne '\e[ q') doesn't make it blink.
Comment 1 Egmont Koblinger 2017-11-18 19:44:55 UTC
Created attachment 363986 [details] [review]
Fix
Comment 2 Christian Persch 2017-11-18 19:48:00 UTC
Comment on attachment 363986 [details] [review]
Fix

Yes.
Comment 3 Egmont Koblinger 2017-11-18 19:52:09 UTC
Committed.