widget: Reset might need to start blinking the cursor

https://bugzilla.gnome.org/show_bug.cgi?id=790536